[package]
name = "groon"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
tokio = { version = "1.48.0", features = [ "fs" ]}
log = "^0.4"
tokio-stream = "0.1.17"
markdown = "1.0.0"
thiserror = "2.0.17"
clap = { version = "4.5.51", features = [ "env" ]}
chrono = "0.4.42"
futures = "0.3.31"
